#527 Show the booking reference, customer name and room as a subtitle on the client booking items

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -88,6 +88,9 @@
                 <tr *ngFor="let itemVm of currentInvoice.invoiceItemVms" class="selectable">
                     <td>
                         <i *ngIf="itemVm.isRelatedToBooking" class="unitpal-font">%</i> {{ getInvoiceItemDisplayName(itemVm) }}
+                        <div class="subtitle" *ngIf="itemVm.subtitle">
+                            <span> {{ itemVm.subtitle }}</span>
+                        </div>
                     </td>
                     <td>{{ itemVm.numberOfItems }}</td>
                     <td>{{ ccySymbol }}{{ itemVm.unitPrice }}</td>
