--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
@@ -44,6 +44,9 @@
                         <tr *ngFor="let itemVm of currentInvoice.invoiceItemVms" class="selectable">
                             <td>
                                 <i *ngIf="itemVm.isRelatedToBooking" class="unitpal-font">%</i> {{ getInvoiceItemDisplayName(itemVm) }}
+                                <div class="subtitle" *ngIf="itemVm.subtitle">
+                                    <span> {{ itemVm.subtitle }}</span>
+                                </div>
                             </td>
                             <td>{{ itemVm.numberOfItems }}</td>
                             <td>{{ ccySymbol }}{{ itemVm.unitPrice }}</td>
@@ -112,6 +115,9 @@
                                     <td><i *ngIf="itemVm.isMovable && isInvoiceSelectedForTransfer()" class="fa fa-arrow-left clickable" [ngClass]="{'transfer-right': isTransferedItem(itemVm.item), 'transfer-left': !isTransferedItem(itemVm.item)}" (click)="transferItemsToLeft(itemVm.item)"></i></td>
                                     <td>
                                         <i *ngIf="itemVm.isRelatedToBooking" class="unitpal-font">%</i> {{ getInvoiceItemDisplayName(itemVm) }}
+                                        <div class="subtitle" *ngIf="itemVm.subtitle">
+                                            <span> {{ itemVm.subtitle }}</span>
+                                        </div>
                                     </td>
                                     <td>{{ itemVm.numberOfItems }}</td>
                                     <td>{{ ccySymbol }}{{ itemVm.unitPrice }}</td>
