--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/invoices-history/components/invoice-details/template/invoice-details.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/invoices-history/components/invoice-details/template/invoice-details.html
@@ -23,10 +23,10 @@
             </thead>
             <tbody>
                 <tr *ngFor="let itemVm of invoiceVM.invoiceItemVms" >
-                    <td width="40%">
+                    <td width="45%" title="{{ itemVm.subtitle }}">
                         <i *ngIf="itemVm.isRelatedToBooking" class="unitpal-font">%</i> {{ getInvoiceItemDisplayName(itemVm) }}
                     </td>
-                    <td width="20%">{{ itemVm.numberOfItems }}</td>
+                    <td width="15%">{{ itemVm.numberOfItems }}</td>
                     <td width="20%">{{ ccySymbol }}{{ itemVm.unitPrice }}</td>
                     <td width="20%">{{ ccySymbol }}{{ itemVm.totalPrice }}</td>
                 </tr>
