[HotFix] Text changed for #451, #449

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -47,7 +47,7 @@
                         {{ 'Send' }}
                     </li>
                     <li *ngIf="canCreateWalkInInvoices(payer)" class="clickable" (click)="createInvoiceForPayer(payer)" title="{{ 'Create a new invoice for this customer' }}">
-                        {{ 'Create Invoice'}}
+                        {{ 'Add Invoice'}}
                     </li>
                     <li *ngIf="canMoveItemsToNewInvoice(payer)" class="clickable" (click)="openTransferPageWithNewInvoice(payer)" title="{{ 'Move items from this invoice to a new one for this customer' }}">
                         {{ 'Split Invoice'}}
