--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
@@ -33,12 +33,11 @@
 			<div class="col-xs-12 col-sm-12">
 				<div class="row">
 					<div class="col-xs-12 padding-top-5px">
-						<button type="button" class="btn btn-primary btn-block oneline-text" [disabled]="!canCreateWalkInInvoices()" (click)="createInvoice()"> 
-							<i class="fa unitpal-font">L</i> 
-							{{ 'Create Invoice' | translate }}
+						<button type="button" class="btn btn-primary btn-block oneline-text" [disabled]="!canCreateWalkInInvoices()" (click)="createInvoice()">
+                            <i class="fa fa-plus"></i> {{ 'Add Invoice' | translate }}
 						</button>
 						<small class="text-muted" *ngIf="!canCreateWalkInInvoices()">
-							<i class="fa fa-info-circle"></i> 
+							<i class="fa fa-info-circle"></i>
 							{{ "You cannot create walk in invoices for customers with Pay Invoice By Agreement enabled." | translate }}
 						</small>
 					</div>
