--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
@@ -1,11 +1,11 @@
 <div class="col-sm-4 col-xs-12">
     <div class="form-group">
-        <label>{{ 'Booking Code' | translate }}
+        <label>{{ 'Customer Profile Number' | translate }}
             <small>
-                <span *ngIf="showBookingCodeMessage && !validBookingCode" title="{{ 'Not a valid customer booking code' | translate  }}">
+                <span *ngIf="showBookingCodeMessage && !validBookingCode" title="{{ 'Not a Valid Customer Profile Number' | translate  }}">
                     <i class="fa fa-exclamation-circle red-color"></i>
                 </span>
-                <span *ngIf="showBookingCodeMessage && validBookingCode" title="{{ 'Valid customer booking code' | translate  }}">
+                <span *ngIf="showBookingCodeMessage && validBookingCode" title="{{ 'Valid Customer Profile Number' | translate  }}">
                     <i class="fa fa-check green-color"></i>
                 </span>
                 <i class="fa fa-refresh fa-spin" *ngIf="loadingCustomerByCode"></i>
@@ -24,7 +24,7 @@
             <search-input-text [placeholder]="'Customer Name'" [preselectedItem]="customer" (onItemSelected)="didSelectCustomer($event)"
                 (onItemDeselected)="didDeselectCustomer()">
             </search-input-text>
-            <span class="input-group-addon th-addon-button" (click)="selectCustomer()"> 
+            <span class="input-group-addon th-addon-button" (click)="selectCustomer()">
                 <i class="fa unitpal-font">(</i>  {{ 'Register' | translate }}
             </span>
         </div>
