--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
@@ -21,7 +21,11 @@
     <div class="form-group">
         <label>{{ 'Customer' | translate }}</label>
         <div class="input-group">
-            <search-input-text [placeholder]="'Customer Name'" [preselectedItem]="customer" (onItemSelected)="didSelectCustomer($event)"
+            <search-input-text
+                [placeholder]="'Customer Name'"
+                [preselectedItem]="customer"
+                [autofocus]="true"
+                (onItemSelected)="didSelectCustomer($event)"
                 (onItemDeselected)="didDeselectCustomer()">
             </search-input-text>
             <span class="input-group-addon th-addon-button" (click)="selectCustomer()">
