--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -82,19 +82,19 @@
 					</span>
 				</td>
 				<td *ngIf="tableOptions.showRowActionsCell()" class="table-item-action-group" [ngClass]="tableOptions.getRowActionsCellClass(isCollapsed)">
-					<a class="btn btn-xs" *ngIf="canPerformShowDetailsCommandOnItem(item)" (click)="showDetailsForItem(item)" title="{{ 'Show Details' | translate }}">
+					<a th-clickable class="btn btn-xs" *ngIf="canPerformShowDetailsCommandOnItem(item)" (click)="showDetailsForItem(item)" title="{{ 'Show Details' | translate }}">
 						<i class="fa fa-eye"></i>
 					</a>
-					<a class="btn btn-xs" *ngIf="canPerformCopyCommandOnItem(item)" (click)="copyItem(item)" title="{{ 'Clone' | translate }}">
+					<a th-clickable class="btn btn-xs" *ngIf="canPerformCopyCommandOnItem(item)" (click)="copyItem(item)" title="{{ 'Clone' | translate }}">
 						<i class="fa unitpal-font">[</i>
 					</a>
-					<a class="btn btn-xs" *ngIf="canPerformEditCommandOnItem(item)" (click)="editItem(item)" title="{{ 'Edit' | translate }}">
+					<a th-clickable class="btn btn-xs" *ngIf="canPerformEditCommandOnItem(item)" (click)="editItem(item)" title="{{ 'Edit' | translate }}">
 						<i class="fa unitpal-font">]</i>
 					</a>
-					<a class="btn btn-xs" *ngIf="canPerformDeleteCommandOnItem(item)" (click)="deleteItem(item)" title="{{ 'Delete' | translate }}">
+					<a th-clickable class="btn btn-xs" *ngIf="canPerformDeleteCommandOnItem(item)" (click)="deleteItem(item)" title="{{ 'Delete' | translate }}">
 						<i class="fa unitpal-font">\</i>
 					</a>
-					<a class="btn btn-xs lazy-loading-table-row-command" *ngIf="canPerformAddExistingRowCommandOnItem(item)" (click)="addExistingItem(item)" title="{{ 'Add' | translate }}">
+					<a th-clickable class="btn btn-xs lazy-loading-table-row-command" *ngIf="canPerformAddExistingRowCommandOnItem(item)" (click)="addExistingItem(item)" title="{{ 'Add' | translate }}">
 						<i class="fa unitpal-font">G</i>
 					</a>
 				</td>
@@ -126,7 +126,7 @@
 									<option *ngFor="let nomPerPage of paginationIndex.nunOfItemsPerPageList" [value]="nomPerPage">
 										{{nomPerPage}} {{ 'items' | translate }}
 									</option>
-								</select> 
+								</select>
 							</div>
 						</div>
 					</div>
@@ -142,10 +142,10 @@
 							<a (click)="updatePageNumber(index.pageNumber)">{{index.displayNumber}}</a>
 						</li>
 						<li>
-							<a class="btn btn-pagination-square" [ngClass]="{disabled: isFirstPage()}" (click)="movePrevious()">
+							<a th-clickable class="btn btn-pagination-square" [ngClass]="{disabled: isFirstPage()}" (click)="movePrevious()">
 								<i class="fa unitpal-font"><</i>
 							</a>
-							<a class="btn btn-pagination-square" [ngClass]="{disabled: isLastPage()}" (click)="moveNext()">
+							<a th-clickable class="btn btn-pagination-square" [ngClass]="{disabled: isLastPage()}" (click)="moveNext()">
 								<i class="fa unitpal-font">></i>
 							</a>
 						</li>
