--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/modal/template/room-availability-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/modal/template/room-availability-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header text-center">
-	<button type="button" class="close" (click)="closeDialog()">&times;</button>
+	<button type="button" class="close" (click)="closeDialog()" th-clickable>&times;</button>
 	<h4 class="modal-title">{{ 'Room Availability' | translate }}</h4>
 </div>
 <div class="modal-body">
